--- a/_config.yml
+++ b/_config.yml
@@ -81,3 +81,10 @@ deploy:
   type: git
   repo: https://github.com/pauljoo/pauljoo.github.io.git
   branch: master
+
+# Search
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
