--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -197,6 +197,7 @@ links_layout: block
 links:
   褚霸: http://www.yufeng.info/
   章亦春: http://agentzh.org/
+  Martin Fowler: https://martinfowler.com/
 
 # Sidebar Avatar
 avatar:
